# dad-n-me

./: .gitmodules  CMakeLists.txt  README.md
assets/: settings.xml
assets/models/primatives/: sphere.dae  sword.dae
assets/stages/: gamestage.xml
assets/textures/: fence.pdn  sandbox.psd  sandboxraw.pdn  texturelist.xml
assets/textures/raw/: fence.pdn  fence.psd  sandbox.pdn  texturelist.xml
include/: dadnme.h  game.h
include/core/: jobsystem.h  render.h
include/entities/: entity.h  player.h  sandcastle.h
include/render/: renderme.h  renderplayer.h  renderscenery.h  renderwilbur.h
include/utilities/: playercamera.h  resourcemanager.h
src/: dadnme.c  game.c  main.c
src/core/: jobsystem.c
src/entities/: player.c  sandcastle.c
src/render/: renderme.c  renderplayer.c  renderscenery.c  renderwilbur.c
src/utilities/: playercamera.c  resourcemanager.c
